# fgddem-py

./: README.md  pyproject.toml
fgddem/: __main__.py
